# portfolio

./: README.md
backend/: .env.example  .gitignore  app.py  logging_middleware.py  main.py  pyproject.toml  requirements.txt
backend/chroma/chroma_db/: chroma.sqlite3
backend/chroma/documents/: Example-Application-Questions.md  contact.md
backend/chroma/documents/applications/: Example-Application-Questions.md
backend/chroma/documents/profile/: cover_letter_template.md  cv.md
backend/chroma/documents/projects/: git_log.md  gitlog.md  jasper_cycles.md  jaspercycles.md  kairos_backend.md  kairos_frontend.md  s3_mobile.md  web_analytics.md
backend/promps/: PROMPT_README.md  portfolio_system_prompt.md  prompt_optimization_guide.md  system_prompt_condensed.md
backend/promps/files/: example_qa.md  portfolio_chatbot.py
backend/scripts/: agent.py  build_chroma.py  build_pinecone.py  start_server.sh  test.py  test_chroma.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatInterface.tsx  ProjectDescriptions.ts  Sidebar.tsx
frontend/components/retroui/: Textarea.tsx
frontend/public/assets/: README.md
